--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -9,10 +9,15 @@
   "author": "Sudip Prasai",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "config": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.0",
-    "mongoose": "^5.11.16"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
+    "mongoose": "^5.11.16",
+    "winston": "^3.3.3"
   }
 }
